--- a/Pages/forecast.cshtml
+++ b/Pages/forecast.cshtml
@@ -1,23 +1,24 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Forecast";
+    var city = HttpContext.Session.GetString("City");
 }
 
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="~/css/globals2.css" />
+    <link rel="stylesheet" href="~/css/style2.css" />
 </head>
 <body>
     <div class="desktop">
         <div class="div">
-            <img class="image" src="img/image-2.png" />
+            <img class="image" src="https://c.animaapp.com/sIUC1J7B/img/image-2@2x.png" />
             <div class="overlap">
                 <div class="overlap-group">
                     <div class="overlap-2">
-                        <img class="img" src="img/image-3.png" />
+                        <img class="img" src="https://c.animaapp.com/sIUC1J7B/img/image-3@2x.png" />
                         <div class="text-wrapper">temperature</div>
                         <div class="text-wrapper-2">wind speed and direction</div>
                         <div class="text-wrapper-3">feels like temperature</div>
@@ -28,9 +29,10 @@
                 <div class="text-wrapper-6">3m/s</div>
             </div>
             <div class="overlap-3">
-                <div class="text-wrapper-7">today in lahti</div>
+                <div class="text-wrapper-7">today in @city</div>
                 <div class="group">
-                    <div class="div-wrapper"><div class="text-wrapper-8">back to city selection</div></div>
+                    <div class="div-wrapper"><div class="text-wrapper-8"><a href="Index" class="button">back to city selection</a></div></div>
+                    
                 </div>
             </div>
         </div>
